css/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.ifr-principal {
  width: 100vw;
  height: 90vh;
  position: relative;
}

.nav-bar {
  position: absolute;
  top: 0;
  left: 0;
  width: 350px;
  height: 90vh;
  padding: 35px;
}

.nav-bar img {
  margin: 35px auto;
  width: 100%;
}

.nav-bar .menu {
  width: 100%;
  height: 50%;
}

footer {
  background-color: #2f4676;
  width: 100%;
  height: 10vh;
  padding: 20px;
  font-weight: bold;
  color: white;
  font-size: 1.2em;
}

footer a {
  text-decoration: none;
  color: #e95ad6;
}

footer a:hover {
  text-decoration: underline;
}

